Bugfix: Flickering of toggleArea overlay when loading settings on Chrome Dev

--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -944,7 +944,7 @@ body > div.toggleAreaModal {
   background: #fff;
   box-shadow: 0 12px 50px rgba(0, 0, 0, 0.3);
   overflow: hidden;
-  z-index: 99;
+  z-index: 97;
   transform: scale(0.7);
   transition: transform 0.3s, opacity 0.3s; }
   body > div.toggleAreaModal::before {
@@ -1053,7 +1053,8 @@ body.showModal > * {
   pointer-events: none; }
 
 body.showModal > div.toggleAreaModal {
-  transform: scale(1); }
+  transform: scale(1);
+  z-index: 99; }
 
 html[dir='rtl'] body > section#wrapper div.toggleAreaDesc::before {
   top: 18px;
